# turtlebot_autonomy

./: instructions.txt
src/simple_navigation_goals/: CMakeLists.txt  package.xml
src/simple_navigation_goals/scripts/: gazebo_navigation_goals.py  utias_145_navigation_goals.py  utias_navigation_goals.py
src/simple_navigation_goals/src/: gazebo_navigation_goals.cpp
src/turtlebot_2dnav/: CMakeLists.txt  package.xml
src/turtlebot_2dnav/launch/: amcl.launch  gmapping.launch
src/turtlebot_2dnav/launch/includes/: gmapping.launch.xml  move_base.launch.xml
src/turtlebot_2dnav/maps/: map_utias.pgm  map_utias.yaml  map_utias2.pgm  map_utias2.yaml  map_utias2_notes.txt  map_utias3.pgm  map_utias3.yaml  map_utias3_notes.txt  map_utias_145.pgm  map_utias_145.yaml  map_utias_notes.txt
src/turtlebot_sim_2dnav/: CMakeLists.txt  package.xml
src/turtlebot_sim_2dnav/cmake/: turtlebot_navigationConfig.cmake
src/turtlebot_sim_2dnav/launch/: amcl.launch  amcl.launch~  gmapping.launch
src/turtlebot_sim_2dnav/launch/includes/: gmapping.launch.xml  move_base.launch.xml
src/turtlebot_sim_2dnav/maps/: map_gazebo.pgm  map_gazebo.yaml
src/turtlebot_sim_2dnav/param/: costmap_common_params.yaml
