<?xml version="1.0"?>
<package>
  <name>simple_navigation_goals</name>
  <version>2.2.0</version>
  <description>The simple_navigation_goals package</description>

  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <license>TODO</license>
  <author email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
