<?xml version="1.0"?>
<package>
  <name>turtlebot_2dnav</name>
  <version>1.4.0</version>
  <description>The turtlebot_2dnav package</description>

  <maintainer email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</maintainer>
  <license>TODO</license>
  <author email="thomas.bamford@mail.utoronto.ca">Thomas Bamford</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>turtlebot_bringup</build_depend>

  <run_depend>move_base</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>turtlebot_bringup</run_depend>

  <build_depend>base_local_planner</build_depend>
  <build_depend>clear_costmap_recovery</build_depend>
  <build_depend>navfn</build_depend>
  <build_depend>rotate_recovery</build_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>clear_costmap_recovery</run_depend>
  <run_depend>rotate_recovery</run_depend>
  <run_depend>navfn</run_depend>

  <export>

  </export>
</package>
